--- a/VM/build.gradle
+++ b/VM/build.gradle
@@ -14,8 +14,10 @@ android {
 
         consumerProguardFiles "consumer-rules.pro"
     }
-    dataBinding {
-        enabled = true
+    dataBinding.enabled = true
+
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
     buildTypes {
         release {
@@ -34,7 +36,12 @@ dependencies {
     api("com.squareup.retrofit2:retrofit:2.9.0")
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
-    implementation "androidx.startup:startup-runtime:1.0.0-rc01"
+    implementation "androidx.startup:startup-runtime:1.0.0"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha02"
+    implementation "androidx.security:security-crypto:1.1.0-alpha02"
 
 
 }
+
+apply from: 'upload.gradle'
