--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,10 @@
 buildscript {
     ext{
         kotlin_version = "1.4.10"
+        fragment_version = "1.2.5"
         lifecycle_version = "2.2.0"
+        activity_version = "1.1.0"
+
     }
 
     repositories {
@@ -10,9 +13,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
+        classpath "com.android.tools.build:gradle:4.1.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
