--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,20 +38,19 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation "androidx.activity:activity-ktx:$activity_version"
 
     implementation project(":VM")
     implementation project(":UI")
-    implementation 'com.google.mlkit:face-detection:16.0.2'
-    def camerax_version = "1.0.0-beta11"
-// CameraX core library using camera2 implementation
-    implementation "androidx.camera:camera-camera2:$camerax_version"
-// CameraX Lifecycle Library
-    implementation "androidx.camera:camera-lifecycle:$camerax_version"
-// CameraX View class
-    implementation "androidx.camera:camera-view:1.0.0-alpha18"
-    implementation 'com.google.firebase:firebase-ml-vision:24.1.0'
-    implementation 'com.google.firebase:firebase-ml-vision-face-model:20.0.2'
+//    implementation 'com.google.mlkit:face-detection:16.0.2'
+//    def camerax_version = "1.0.0-beta11"
+//// CameraX core library using camera2 implementation
+//    implementation "androidx.camera:camera-camera2:$camerax_version"
+//// CameraX Lifecycle Library
+//    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+//// CameraX View class
+//    implementation "androidx.camera:camera-view:1.0.0-alpha18"
+//    implementation 'com.google.firebase:firebase-ml-vision:24.1.0'
+//    implementation 'com.google.firebase:firebase-ml-vision-face-model:20.0.2'
 
 
 }
