--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 buildscript {
     ext{
         kotlin_version = "1.4.10"
-        fragment_version = "1.2.5"
+        fragment_version = "1.3.0-beta01"
         lifecycle_version = "2.2.0"
         activity_version = "1.1.0"
 
