--- a/VM/build.gradle
+++ b/VM/build.gradle
@@ -1,14 +1,13 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
 android {
-    compileSdkVersion 29
-    buildToolsVersion "30.0.1"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -38,10 +37,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
     implementation "androidx.startup:startup-runtime:1.0.0"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
-    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha02"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha04"
     implementation "androidx.security:security-crypto:1.1.0-alpha02"
 
 
 }
 
-apply from: 'upload.gradle'
+//apply from: 'upload.gradle'
