--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:name=".App"
         android:theme="@style/AppTheme">
-        <activity android:name=".list.ListPage">
+        <activity android:name=".material.MaterialActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
