--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,11 @@ dependencies {
 
     implementation project(":VM")
     implementation project(":UI")
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 //    implementation 'com.google.mlkit:face-detection:16.0.2'
 //    def camerax_version = "1.0.0-beta11"
 //// CameraX core library using camera2 implementation
